--- a/index.html
+++ b/index.html
@@ -40,6 +40,49 @@
         <!-- TO-DO: More information about my interests etc. to go here -->
         <p>More about my interests etc. to go here</p>
       </section>
+      <section>
+        <h2>Experience</h2>
+        <p>I have experience with the following technologies:</p>
+        <h3>Frontend</h3>
+        <ul>
+            <li>React (TSX/JSX)</li>
+            <li>JavaScript</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Tailwind</li>
+            <li>Bulma</li>
+        </ul>
+        <h3>Backend</h3>
+        <ul>
+            <li>Python</li>
+            <li>Node.js</li>
+            <li>Express</li>
+            <li>Flask</li>
+            <li>Mongoose</li>
+            <li>SQLAlchemy</li>
+            <li>Marshmallow</li>
+            <li>MongoDB</li>
+            <li>PostgreSQL</li>
+            <li>Insomnia</li>
+            <li>TablePlus</li>
+        </ul>
+        <h3>Other</h3>
+        <ul>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>VS Code</li>
+            <li>TypeScript</li>
+            <li>npm</li>
+            <li>Vite</li>
+            <li>pip</li>
+            <li>Pipenv</li>
+            <li>pytest</li>
+            <li>Netlify</li>
+            <li>Heroku</li>
+            <li>Slack</li>
+            <li>Pair-programming</li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
