Added Projects section

--- a/index.html
+++ b/index.html
@@ -45,43 +45,127 @@
         <p>I have experience with the following technologies:</p>
         <h3>Frontend</h3>
         <ul>
-            <li>React (TSX/JSX)</li>
-            <li>JavaScript</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Tailwind</li>
-            <li>Bulma</li>
+          <li>React (TSX/JSX)</li>
+          <li>JavaScript</li>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>Tailwind</li>
+          <li>Bulma</li>
         </ul>
         <h3>Backend</h3>
         <ul>
-            <li>Python</li>
-            <li>Node.js</li>
-            <li>Express</li>
-            <li>Flask</li>
-            <li>Mongoose</li>
-            <li>SQLAlchemy</li>
-            <li>Marshmallow</li>
-            <li>MongoDB</li>
-            <li>PostgreSQL</li>
-            <li>Insomnia</li>
-            <li>TablePlus</li>
+          <li>Python</li>
+          <li>Node.js</li>
+          <li>Express</li>
+          <li>Flask</li>
+          <li>Mongoose</li>
+          <li>SQLAlchemy</li>
+          <li>Marshmallow</li>
+          <li>MongoDB</li>
+          <li>PostgreSQL</li>
+          <li>Insomnia</li>
+          <li>TablePlus</li>
         </ul>
         <h3>Other</h3>
         <ul>
-            <li>Git</li>
-            <li>GitHub</li>
-            <li>VS Code</li>
-            <li>TypeScript</li>
-            <li>npm</li>
-            <li>Vite</li>
-            <li>pip</li>
-            <li>Pipenv</li>
-            <li>pytest</li>
-            <li>Netlify</li>
-            <li>Heroku</li>
-            <li>Slack</li>
-            <li>Pair-programming</li>
+          <li>Git</li>
+          <li>GitHub</li>
+          <li>VS Code</li>
+          <li>TypeScript</li>
+          <li>npm</li>
+          <li>Vite</li>
+          <li>pip</li>
+          <li>Pipenv</li>
+          <li>pytest</li>
+          <li>Netlify</li>
+          <li>Heroku</li>
+          <li>Slack</li>
+          <li>Pair-programming</li>
         </ul>
+      </section>
+      <section>
+        <h2>Projects</h2>
+        <p>
+          I completed General Assembly's Software Engineering Bootcamp between
+          January and April 2024. As part of the curriculum I built four
+          projects which are outlined chronologically below:
+        </p>
+        <article>
+          <h3>Project 1 (Solo) - Frogger</h3>
+          <!-- TO-DO: Insert screenshot of Frogger here -->
+          <picture> </picture>
+          <p>
+            Using DOM manipulation, I built a grid-based browser version of 80s
+            arcade game Frogger in HTML, CSS and JavaScript across 6 business
+            days (8 in total). My main challenges included animating the
+            obstacles and detecting collisions with my player character. My
+            stretch goals included a high score display and increasing the
+            difficulty as the game progresses.
+          </p>
+          <!-- TO-DO: Look into correct way to implement target="_blank" for security -->
+          <div>
+            <a
+              href="https://github.com/CatherineBrett/SEB-Project-1/blob/main/README.md"
+              >README</a
+            ><a href="https://catherinebrett.github.io/SEB-Project-1/">Site</a>
+          </div>
+        </article>
+        <article>
+          <h3>Project 2 (Pair) - Quiz App</h3>
+          <!-- TO-DO: Insert screenshot of Quiz App here -->
+          <picture> </picture>
+          <p>
+            Produced a React quiz app with TypeScript over a two-day hackathon.
+            Our app consumed the Open Trivia public API, had a router with two
+            “pages”, and was styled using the Bulma CSS framework. We mostly
+            pair-programmed, taking turns as driver/navigator.
+          </p>
+          <!-- TO-DO: Implement target="_blank" correctly -->
+          <div>
+            <a
+              href="https://github.com/CatherineBrett/SEB-Project-2/blob/main/README.md"
+              >README</a
+            ><a href="https://catherine-liv-project-2.netlify.app/">Site</a>
+          </div>
+        </article>
+        <article>
+          <h3>Project 3 (Group of 3) - Bootcamp Buddy</h3>
+          <!-- TO-DO: Insert screenshot of Bootcamp Buddy here -->
+          <picture> </picture>
+          <p>
+            Built a full-stack “bootcamp advice” app over one week, using
+            MongoDB, Express, React/TypeScript and Node.js. My contributions to
+            this group project included providing the concept, implementing UI,
+            writing some of the key logic for our CRUD functionality and
+            producing some of the form validation and error handling.
+          </p>
+          <!-- TO-DO: Implement target="_blank" correctly -->
+          <div>
+            <a
+              href="https://github.com/CatherineBrett/project-3-backend/blob/main/README.md"
+              >README</a
+            ><a href="https://bootcamp-buddy.netlify.app/">Site</a>
+          </div>
+        </article>
+        <article>
+          <h3>Project 4 (Solo) - Harborne Community Groups</h3>
+          <!-- TO-DO: Insert screenshot of Harborne Community Groups here -->
+          <picture> </picture>
+          <p>
+            Built a full-stack “community groups” app over 8 business days (12
+            in total), using a Python Flask API with Flask REST framework to
+            serve my data from a Postgres database. I built my frontend with
+            React/TypeScript. The project has CRUD functionality, with various
+            models and a mix of one-to-many and many-to-many relationships.
+          </p>
+          <!-- TO-DO: Implement target="_blank" correctly -->
+          <div>
+            <a
+              href="https://github.com/CatherineBrett/project-4-backend/blob/main/README.md"
+              >README</a
+            ><a href="https://harbornecommunitygroups.netlify.app/">Site</a>
+          </div>
+        </article>
       </section>
     </main>
   </body>
