--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main.css" />
     <title>Catherine Brett | Junior Software Engineer</title>
   </head>
   <body>
@@ -103,7 +104,7 @@
             difficulty as the game progresses.
           </p>
           <!-- TO-DO: Look into correct way to implement target="_blank" for security -->
-          <div>
+          <div class="link-container">
             <a
               href="https://github.com/CatherineBrett/SEB-Project-1/blob/main/README.md"
               >README</a
@@ -121,7 +122,7 @@
             pair-programmed, taking turns as driver/navigator.
           </p>
           <!-- TO-DO: Implement target="_blank" correctly -->
-          <div>
+          <div class="link-container">
             <a
               href="https://github.com/CatherineBrett/SEB-Project-2/blob/main/README.md"
               >README</a
@@ -140,7 +141,7 @@
             producing some of the form validation and error handling.
           </p>
           <!-- TO-DO: Implement target="_blank" correctly -->
-          <div>
+          <div class="link-container">
             <a
               href="https://github.com/CatherineBrett/project-3-backend/blob/main/README.md"
               >README</a
@@ -159,7 +160,7 @@
             models and a mix of one-to-many and many-to-many relationships.
           </p>
           <!-- TO-DO: Implement target="_blank" correctly -->
-          <div>
+          <div class="link-container">
             <a
               href="https://github.com/CatherineBrett/project-4-backend/blob/main/README.md"
               >README</a
