Moves name and job title to header

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Catherine Brett | Junior Software Engineer</title>
   </head>
   <body>
-    <main>
+    <header>
       <h1>Catherine Brett | Junior Software Engineer</h1>
+    </header>
+    <main>
       <section>
         <h2>About Me</h2>
         <p>
