--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!-- NOTES: 
+Headshot/illustration?
+Fonts
+Colour schemes
+Links to email, GitHub, LinkedIn
+Extended About Me statement - what led me to software engineering, what I am looking for (full-time role, keen to learn more about backend development), interests, industry interests e.g. online resources, podcasts, coding courses etc., transferrable previous experience
+-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -21,7 +29,6 @@
           both an employee and a volunteer.
         </p>
 
-        <!-- TO-DO: Elaborate on what led me to software engineering -->
         <p>
           I have loved aspects of all my previous roles and am now eager to find
           something that “has it all”. Since the pandemic, WFH has meant sharing
@@ -40,8 +47,7 @@
           to constantly improve.
         </p>
 
-        <!-- TO-DO: More information about my interests etc. to go here -->
-        <p>More about my interests etc. to go here</p>
+        <p>More info to come</p>
       </section>
       <section>
         <h2>Experience</h2>
