Added palette, some utility classes, and a CSS reset

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@ Extended About Me statement - what led me to software engineering, what I am loo
   </head>
   <body>
     <header>
-      <h1>Catherine Brett | Junior Software Engineer</h1>
+      <h1 class="uppercase bold">
+        Catherine Brett <span class="accent">Junior Software Engineer</span>
+      </h1>
     </header>
     <main>
       <section>
