Set up initial typography and spacing and centred body

--- a/index.html
+++ b/index.html
@@ -13,16 +13,22 @@ Extended About Me statement - what led me to software engineering, what I am loo
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="main.css" />
     <title>Catherine Brett | Junior Software Engineer</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
-      <h1 class="uppercase bold">
+      <h1 class="med-text bold">
         Catherine Brett <span class="accent">Junior Software Engineer</span>
       </h1>
     </header>
     <main>
       <section>
-        <h2>About Me</h2>
+        <h2 class="large-text">About Me</h2>
         <p>
           I am a mid-career changer who has accrued diverse experience in a
           variety of roles, including working for the picture desk of a national
@@ -52,9 +58,9 @@ Extended About Me statement - what led me to software engineering, what I am loo
         <p>More info to come</p>
       </section>
       <section>
-        <h2>Experience</h2>
+        <h2 class="large-text">Experience</h2>
         <p>I have experience with the following technologies:</p>
-        <h3>Frontend</h3>
+        <h3 class="med-text">Frontend</h3>
         <ul>
           <li>React (TSX/JSX)</li>
           <li>JavaScript</li>
@@ -63,7 +69,7 @@ Extended About Me statement - what led me to software engineering, what I am loo
           <li>Tailwind</li>
           <li>Bulma</li>
         </ul>
-        <h3>Backend</h3>
+        <h3 class="med-text">Backend</h3>
         <ul>
           <li>Python</li>
           <li>Node.js</li>
@@ -77,7 +83,7 @@ Extended About Me statement - what led me to software engineering, what I am loo
           <li>Insomnia</li>
           <li>TablePlus</li>
         </ul>
-        <h3>Other</h3>
+        <h3 class="med-text">Other</h3>
         <ul>
           <li>Git</li>
           <li>GitHub</li>
@@ -95,14 +101,14 @@ Extended About Me statement - what led me to software engineering, what I am loo
         </ul>
       </section>
       <section>
-        <h2>Projects</h2>
+        <h2 class="large-text">Projects</h2>
         <p>
           I completed General Assembly's Software Engineering Bootcamp between
           January and April 2024. As part of the curriculum I built four
           projects which are outlined chronologically below:
         </p>
         <article>
-          <h3>Project 1 (Solo) - Frogger</h3>
+          <h3 class="med-text">Project 1 (Solo) - Frogger</h3>
           <!-- TO-DO: Insert screenshot of Frogger here -->
           <picture> </picture>
           <p>
@@ -122,7 +128,7 @@ Extended About Me statement - what led me to software engineering, what I am loo
           </div>
         </article>
         <article>
-          <h3>Project 2 (Pair) - Quiz App</h3>
+          <h3 class="med-text">Project 2 (Pair) - Quiz App</h3>
           <!-- TO-DO: Insert screenshot of Quiz App here -->
           <picture> </picture>
           <p>
@@ -140,7 +146,7 @@ Extended About Me statement - what led me to software engineering, what I am loo
           </div>
         </article>
         <article>
-          <h3>Project 3 (Group of 3) - Bootcamp Buddy</h3>
+          <h3 class="med-text">Project 3 (Group of 3) - Bootcamp Buddy</h3>
           <!-- TO-DO: Insert screenshot of Bootcamp Buddy here -->
           <picture> </picture>
           <p>
@@ -159,7 +165,7 @@ Extended About Me statement - what led me to software engineering, what I am loo
           </div>
         </article>
         <article>
-          <h3>Project 4 (Solo) - Harborne Community Groups</h3>
+          <h3 class="med-text">Project 4 (Solo) - Harborne Community Groups</h3>
           <!-- TO-DO: Insert screenshot of Harborne Community Groups here -->
           <picture> </picture>
           <p>
