Added most tech logos. Needs tidying.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@ Extended About Me statement - what led me to software engineering, what I am loo
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"
+    />
   </head>
   <body>
     <header>
@@ -61,42 +66,111 @@ Extended About Me statement - what led me to software engineering, what I am loo
         <h2 class="large-text">Experience</h2>
         <p>I have experience with the following technologies:</p>
         <h3 class="med-text">Frontend</h3>
-        <ul>
-          <li>React (TSX/JSX)</li>
-          <li>JavaScript</li>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>Tailwind</li>
-          <li>Bulma</li>
+        <ul class="fe-icons">
+          <li>
+            <i class="devicon-react-original"></i>
+            React (TSX/JSX)
+          </li>
+          <li>
+            <i class="devicon-javascript-plain"></i>
+            JavaScript
+          </li>
+          <li>
+            <i class="devicon-html5-plain"></i>
+            HTML
+          </li>
+          <li>
+            <i class="devicon-css3-plain"></i>
+            CSS
+          </li>
+          <li>
+            <i class="devicon-tailwindcss-original"></i>
+            Tailwind
+          </li>
+          <li>
+            <i class="devicon-bulma-plain"></i>
+            Bulma
+          </li>
         </ul>
         <h3 class="med-text">Backend</h3>
-        <ul>
-          <li>Python</li>
-          <li>Node.js</li>
-          <li>Express</li>
-          <li>Flask</li>
-          <li>Mongoose</li>
-          <li>SQLAlchemy</li>
+        <ul class="be-icons">
+          <li>
+            <i class="devicon-python-plain"></i>
+            Python
+          </li>
+          <li>
+            <i class="devicon-nodejs-plain"></i>
+            Node.js
+          </li>
+          <li>
+            <i class="devicon-express-original"></i>
+            Express
+          </li>
+          <li>
+            <i class="devicon-flask-original"></i>
+            Flask
+          </li>
+          <li>
+            <i class="devicon-mongoose-original"></i>
+            Mongoose
+          </li>
+          <li>
+            <i class="devicon-sqlalchemy-plain"></i>
+            SQLAlchemy
+          </li>
           <li>Marshmallow</li>
-          <li>MongoDB</li>
-          <li>PostgreSQL</li>
-          <li>Insomnia</li>
+          <li>
+            <i class="devicon-mongodb-plain"></i>
+            MongoDB
+          </li>
+          <li>
+            <i class="devicon-postgresql-plain"></i>
+            PostgreSQL
+          </li>
+          <li>
+            <i class="devicon-insomnia-plain"></i>
+            Insomnia
+          </li>
           <li>TablePlus</li>
         </ul>
         <h3 class="med-text">Other</h3>
-        <ul>
-          <li>Git</li>
-          <li>GitHub</li>
-          <li>VS Code</li>
-          <li>TypeScript</li>
-          <li>npm</li>
-          <li>Vite</li>
+        <ul class="other-icons">
+          <li>
+            <i class="devicon-git-plain"></i>
+            Git
+          </li>
+          <li>
+            <i class="devicon-github-original"></i>
+            GitHub
+          </li>
+          <li>
+            <i class="devicon-vscode-plain"></i>
+            VS Code
+          </li>
+          <li>
+            <i class="devicon-typescript-plain"></i>
+            TypeScript
+          </li>
+          <li>
+            <i class="devicon-npm-original-wordmark"></i>
+          npm</li>
+          <li>
+            <i class="devicon-vite-original"></i>
+          Vite</li>
           <li>pip</li>
           <li>Pipenv</li>
-          <li>pytest</li>
-          <li>Netlify</li>
-          <li>Heroku</li>
-          <li>Slack</li>
+          <li>
+            <i class="devicon-pytest-plain"></i>
+          pytest</li>
+          <li>
+            <i class="devicon-netlify-plain"></i>
+          Netlify</li>
+          <li>
+            <i class="devicon-heroku-original"></i>
+          Heroku</li>
+          <li>
+            <i class="devicon-slack-plain"></i>
+          Slack</li>
           <li>Pair-programming</li>
         </ul>
       </section>
