--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@ Extended About Me statement - what led me to software engineering, what I am loo
       </section>
       <section>
         <h2 class="large-text">Experience</h2>
-        <p>I have experience with the following technologies:</p>
+        <p>Some of the technologies I have experience with include:</p>
         <h3 class="med-text">Frontend</h3>
         <ul class="fe-icons">
           <li>
             <i class="devicon-react-original"></i>
-            React (TSX/JSX)
+            React
           </li>
           <li>
             <i class="devicon-javascript-plain"></i>
@@ -118,7 +118,6 @@ Extended About Me statement - what led me to software engineering, what I am loo
             <i class="devicon-sqlalchemy-plain"></i>
             SQLAlchemy
           </li>
-          <li>Marshmallow</li>
           <li>
             <i class="devicon-mongodb-plain"></i>
             MongoDB
@@ -131,7 +130,6 @@ Extended About Me statement - what led me to software engineering, what I am loo
             <i class="devicon-insomnia-plain"></i>
             Insomnia
           </li>
-          <li>TablePlus</li>
         </ul>
         <h3 class="med-text">Other</h3>
         <ul class="other-icons">
@@ -152,26 +150,21 @@ Extended About Me statement - what led me to software engineering, what I am loo
             TypeScript
           </li>
           <li>
-            <i class="devicon-npm-original-wordmark"></i>
-          npm</li>
-          <li>
             <i class="devicon-vite-original"></i>
-          Vite</li>
-          <li>pip</li>
-          <li>Pipenv</li>
+            Vite
+          </li>
           <li>
             <i class="devicon-pytest-plain"></i>
-          pytest</li>
+            pytest
+          </li>
           <li>
             <i class="devicon-netlify-plain"></i>
-          Netlify</li>
+            Netlify
+          </li>
           <li>
             <i class="devicon-heroku-original"></i>
-          Heroku</li>
-          <li>
-            <i class="devicon-slack-plain"></i>
-          Slack</li>
-          <li>Pair-programming</li>
+            Heroku
+          </li>
         </ul>
       </section>
       <section>
