--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@ Extended About Me statement - what led me to software engineering, what I am loo
       <h1 class="med-text bold">
         Catherine Brett <span class="accent">Junior Software Engineer</span>
       </h1>
+      <nav class="contact">
+        <a href="https://github.com/CatherineBrett"
+          ><i class="devicon-github-original"></i
+        ></a>
+        <a href="https://www.linkedin.com/in/catherine-brett/">
+          <i class="devicon-linkedin-plain"></i>
+        </a>
+      </nav>
     </header>
     <main>
       <section>
