Changed GitHub and LinkedIn icons, and added envelope icon for mailto:

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@ Extended About Me statement - what led me to software engineering, what I am loo
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="main.css" />
+    <script
+      src="https://kit.fontawesome.com/9e5b142d9b.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Catherine Brett | Junior Software Engineer</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -27,16 +31,19 @@ Extended About Me statement - what led me to software engineering, what I am loo
   </head>
   <body>
     <header>
-      <h1 class="med-text bold">
+      <h1 class="med-text bold header-item">
         Catherine Brett <span class="accent">Junior Software Engineer</span>
       </h1>
-      <nav class="contact">
+      <nav class="contact header-item">
         <a href="https://github.com/CatherineBrett"
-          ><i class="devicon-github-original"></i
+          ><i class="fa-brands fa-github"></i
         ></a>
         <a href="https://www.linkedin.com/in/catherine-brett/">
-          <i class="devicon-linkedin-plain"></i>
+          <i class="fa-brands fa-linkedin"></i>
         </a>
+        <a href="mailto:catherinejanebrett@icloud.com"
+          ><i class="fa-solid fa-envelope"></i
+        ></a>
       </nav>
     </header>
     <main>
