--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ Extended About Me statement - what led me to software engineering, what I am loo
           projects which are outlined chronologically below:
         </p>
         <article>
-          <h3 class="med-text">Project 1 (Solo) - Frogger</h3>
+          <h3 class="med-text">Project 1 (Solo) <span class="project-name">Frogger</span></h3>
           <!-- TO-DO: Insert screenshot of Frogger here -->
           <picture> </picture>
           <p>
@@ -210,7 +210,7 @@ Extended About Me statement - what led me to software engineering, what I am loo
           </div>
         </article>
         <article>
-          <h3 class="med-text">Project 2 (Pair) - Quiz App</h3>
+          <h3 class="med-text">Project 2 (Pair) <span class="project-name">Quiz App</span></h3>
           <!-- TO-DO: Insert screenshot of Quiz App here -->
           <picture> </picture>
           <p>
@@ -228,7 +228,7 @@ Extended About Me statement - what led me to software engineering, what I am loo
           </div>
         </article>
         <article>
-          <h3 class="med-text">Project 3 (Group of 3) - Bootcamp Buddy</h3>
+          <h3 class="med-text">Project 3 (Group of 3) <span class="project-name">Bootcamp Buddy</span></h3>
           <!-- TO-DO: Insert screenshot of Bootcamp Buddy here -->
           <picture> </picture>
           <p>
@@ -247,7 +247,7 @@ Extended About Me statement - what led me to software engineering, what I am loo
           </div>
         </article>
         <article>
-          <h3 class="med-text">Project 4 (Solo) - Harborne Community Groups</h3>
+          <h3 class="med-text">Project 4 (Solo) <span class="project-name">Harborne Community Groups</span></h3>
           <!-- TO-DO: Insert screenshot of Harborne Community Groups here -->
           <picture> </picture>
           <p>
