Updated About Me copy

--- a/index.html
+++ b/index.html
@@ -50,32 +50,54 @@ Extended About Me statement - what led me to software engineering, what I am loo
       <section>
         <h2 class="large-text">About Me</h2>
         <p>
-          I am a mid-career changer who has accrued diverse experience in a
-          variety of roles, including working for the picture desk of a national
-          newspaper, in marketing for a chain of restaurants, for myself as a
-          freelance translator, and more recently, in the voluntary sector as
-          both an employee and a volunteer.
+          Hello there and welcome to my website
+          <span class="small-text">😁</span>
+        </p>
+
+        <p>
+          My name is Catherine and I am a mid-career changer who has accrued
+          diverse experience in a variety of roles, including working for the
+          picture desk of a national newspaper, in marketing for a chain of
+          restaurants, for myself as a freelance translator, and more recently,
+          in the voluntary sector as both an employee and a volunteer.
         </p>
 
         <p>
           I have loved aspects of all my previous roles and am now eager to find
-          something that “has it all”. Since the pandemic, WFH has meant sharing
-          a workspace with a software engineer, and this has given me an
+          one that “has it all”. Since the pandemic, WFH has meant sharing a
+          workspace with a software engineer, and this has given me an
           invaluable insight into the profession and its processes - stand-ups,
           sprints, retros etc. As someone who is motivated by effective
-          collaboration, high performance, continuous learning and intellectual
-          challenge, the field very much appeals.
+          collaboration, high performance, and continuous learning and
+          improvement, my interest was piqued. However, having thought of myself
+          (reductively!) as a "humanities person" all my adult life, I didn't
+          believe at the time that a "stem" career could really be for me.
         </p>
 
         <p>
-          As a colleague, I'm adept at asking the right questions and at
-          thinking ahead to forestall problems. Being a linguist, I'm a clear,
-          adaptable communicator. I am looking forward to securing a position
-          where I will be supported to understand my new craft inside out, and
-          to constantly improve.
+          A couple of years later and to meet the requirements of a publishing
+          job which asked for experience of HTML and JavaScript, I spent some
+          time on Codecademy and found to my surprise that I very much enjoyed
+          it. Around the same time, some personality testing via my university's
+          careers service also suggested the field would be a very good fit for
+          me. All roads now seemed to point to software engineering, and so I
+          took the plunge and enrolled on General Assembly's immersive bootcamp.
+          It was fantastic to be back in a learning environment and to be really
+          challenged by something totally new, and I am looking forward to
+          starting out in a field where I will be expected to continue to learn
+          and improve throughout my career.
         </p>
 
-        <p>More info to come</p>
+        <p>
+          As a colleague, I think I'm adept at asking the right questions and at
+          thinking ahead to forestall problems. Being a linguist, I'm a clear,
+          adaptable communicator. I am looking forward to securing a full-time
+          position working with super-fun people who are super-serious about
+          what they do, and where I will be supported and encouraged to understand
+          my new craft inside out.
+        </p>
+
+        <p>(More info re interests etc. to go in About Me section.)</p>
       </section>
       <section>
         <h2 class="large-text">Experience</h2>
@@ -190,7 +212,9 @@ Extended About Me statement - what led me to software engineering, what I am loo
           projects which are outlined chronologically below:
         </p>
         <article>
-          <h3 class="med-text">Project 1 (Solo) <span class="project-name">Frogger</span></h3>
+          <h3 class="med-text">
+            Project 1 (Solo) <span class="project-name">Frogger</span>
+          </h3>
           <!-- TO-DO: Insert screenshot of Frogger here -->
           <picture> </picture>
           <p>
@@ -210,7 +234,9 @@ Extended About Me statement - what led me to software engineering, what I am loo
           </div>
         </article>
         <article>
-          <h3 class="med-text">Project 2 (Pair) <span class="project-name">Quiz App</span></h3>
+          <h3 class="med-text">
+            Project 2 (Pair) <span class="project-name">Quiz App</span>
+          </h3>
           <!-- TO-DO: Insert screenshot of Quiz App here -->
           <picture> </picture>
           <p>
@@ -228,7 +254,10 @@ Extended About Me statement - what led me to software engineering, what I am loo
           </div>
         </article>
         <article>
-          <h3 class="med-text">Project 3 (Group of 3) <span class="project-name">Bootcamp Buddy</span></h3>
+          <h3 class="med-text">
+            Project 3 (Group of 3)
+            <span class="project-name">Bootcamp Buddy</span>
+          </h3>
           <!-- TO-DO: Insert screenshot of Bootcamp Buddy here -->
           <picture> </picture>
           <p>
@@ -247,7 +276,10 @@ Extended About Me statement - what led me to software engineering, what I am loo
           </div>
         </article>
         <article>
-          <h3 class="med-text">Project 4 (Solo) <span class="project-name">Harborne Community Groups</span></h3>
+          <h3 class="med-text">
+            Project 4 (Solo)
+            <span class="project-name">Harborne Community Groups</span>
+          </h3>
           <!-- TO-DO: Insert screenshot of Harborne Community Groups here -->
           <picture> </picture>
           <p>
