Added picture elements and screenshots of projects 1-3 for desktop and mobile

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@ Extended About Me statement - what led me to software engineering, what I am loo
           thinking ahead to forestall problems. Being a linguist, I'm a clear,
           adaptable communicator. I am looking forward to securing a full-time
           position working with super-fun people who are super-serious about
-          what they do, and where I will be supported and encouraged to understand
-          my new craft inside out.
+          what they do, and where I will be supported and encouraged to
+          understand my new craft inside out.
         </p>
 
         <p>(More info re interests etc. to go in About Me section.)</p>
@@ -215,8 +215,13 @@ Extended About Me statement - what led me to software engineering, what I am loo
           <h3 class="med-text">
             Project 1 (Solo) <span class="project-name">Frogger</span>
           </h3>
-          <!-- TO-DO: Insert screenshot of Frogger here -->
-          <picture> </picture>
+          <picture>
+            <source
+              srcset="/assets/frogger-desktop.png"
+              media="(min-width: 720px)"
+            />
+            <img src="/assets/frogger-mobile.png" alt="Frogger screenshot" />
+          </picture>
           <p>
             Using DOM manipulation, I built a grid-based browser version of 80s
             arcade game Frogger in HTML, CSS and JavaScript across 6 business
@@ -237,8 +242,15 @@ Extended About Me statement - what led me to software engineering, what I am loo
           <h3 class="med-text">
             Project 2 (Pair) <span class="project-name">Quiz App</span>
           </h3>
-          <!-- TO-DO: Insert screenshot of Quiz App here -->
-          <picture> </picture>
+          <picture>
+            <picture>
+              <source
+                srcset="/assets/quiz-desktop.png"
+                media="(min-width: 720px)"
+              />
+              <img src="/assets/quiz-mobile.png" alt="Quiz screenshot" />
+            </picture>
+          </picture>
           <p>
             Produced a React quiz app with TypeScript over a two-day hackathon.
             Our app consumed the Open Trivia public API, had a router with two
@@ -258,8 +270,13 @@ Extended About Me statement - what led me to software engineering, what I am loo
             Project 3 (Group of 3)
             <span class="project-name">Bootcamp Buddy</span>
           </h3>
-          <!-- TO-DO: Insert screenshot of Bootcamp Buddy here -->
-          <picture> </picture>
+          <picture>
+            <source
+              srcset="/assets/bb-desktop.png"
+              media="(min-width: 720px)"
+            />
+            <img src="/assets/bb-mobile.png" alt="Bootcamp Buddy screenshot" />
+          </picture>
           <p>
             Built a full-stack “bootcamp advice” app over one week, using
             MongoDB, Express, React/TypeScript and Node.js. My contributions to
